Ticket und Station und logEntry hinzugefügt

--- a/Ticketautomat/Ticketautomat.csproj
+++ b/Ticketautomat/Ticketautomat.csproj
@@ -63,6 +63,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\LogEntry.cs" />
+    <Compile Include="Classes\Station.cs" />
+    <Compile Include="Classes\Ticket.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
@@ -97,8 +100,6 @@
   <ItemGroup>
     <Resource Include="Resources\Images\softwareIcon.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Classes\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
