MainWindow aktualisiert, Taskbar entfernt

--- a/Ticketautomat/Ticketautomat.csproj
+++ b/Ticketautomat/Ticketautomat.csproj
@@ -103,6 +103,8 @@
   <ItemGroup>
     <Resource Include="Resources\Images\softwareIcon.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="Resources\Images\map_full.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
