--- a/Ticketautomat/Ticketautomat.csproj
+++ b/Ticketautomat/Ticketautomat.csproj
@@ -66,6 +66,8 @@
     <Compile Include="Classes\LogEntry.cs" />
     <Compile Include="Classes\MaintenanceProfile.cs" />
     <Compile Include="Classes\Manager.cs" />
+    <Compile Include="Classes\Money.cs" />
+    <Compile Include="Classes\MoneyManager.cs" />
     <Compile Include="Classes\Profile.cs" />
     <Compile Include="Classes\Station.cs" />
     <Compile Include="Classes\Ticket.cs" />
