--- a/Ticketautomat/Ticketautomat.csproj
+++ b/Ticketautomat/Ticketautomat.csproj
@@ -63,13 +63,16 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Classes\EnumCollection.cs" />
     <Compile Include="Classes\LogEntry.cs" />
     <Compile Include="Classes\MaintenanceProfile.cs" />
     <Compile Include="Classes\Manager.cs" />
     <Compile Include="Classes\Money.cs" />
     <Compile Include="Classes\MoneyManager.cs" />
+    <Compile Include="Classes\PriceEntry.cs" />
     <Compile Include="Classes\Profile.cs" />
     <Compile Include="Classes\Station.cs" />
+    <Compile Include="Classes\StationGraph.cs" />
     <Compile Include="Classes\Ticket.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
