--- a/Ticketautomat/Ticketautomat.csproj
+++ b/Ticketautomat/Ticketautomat.csproj
@@ -120,5 +120,9 @@
   <ItemGroup>
     <Resource Include="Resources\Images\background_table.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\adminLogin_notAllBoxesFilledOut.png" />
+    <Resource Include="Resources\Images\adminLogin_wrongData.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
