--- a/.gitignore
+++ b/.gitignore
@@ -8,4 +8,8 @@ Ticketautomat/bin/Release/data/savefile.txt
 Ticketautomat/bin/Release/data/motd.txt
 Ticketautomat/bin/Release/data/spotlight.txt
 
+motd
+savefile
+spotlight
+
 *.txt
