Name-Attribute aus x aufgerufen; Test-Accounts entfernt; Versionsdetails abgeändert; Hintergrundbild hinzugefügt; Leitfarben geändert

--- a/Ticketautomat/Ticketautomat.csproj
+++ b/Ticketautomat/Ticketautomat.csproj
@@ -127,5 +127,11 @@
   <ItemGroup>
     <Resource Include="Resources\Images\lockIcon.png" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="background.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Resources\Images\background.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
